--- a/ART.html
+++ b/ART.html
@@ -16,18 +16,10 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT ME</a></li>
         <li><a href="ET.html">ET</a></li>
-        <li><a href="ART.html">ELA</a></li>
+        <li><a href="ELA.html">ELA</a></li>
         <li><a href="SCIENCE.html">SCIENCE</a></li>
         <li><a href="HISTORY.html">HISTORY</a></li>
         <li><a href="LINK.html">LINK</a></li>
     </ul>
  </div>     
  <div class="content"> 
- 
- <h2>🩷Welcome to my hompage🩷</h2>
- </div> 
- <div class="footer"></div>  
- <h3>Hello, my name is Seoeun. This is my web portfolio!</h3> 
- <img src="images/main.jpeg" alt="main" class="INDEXpic"  width="400px" height="600px";>
-</body>
-</html>
