--- a/HISTORY.html
+++ b/HISTORY.html
@@ -16,10 +16,20 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT ME</a></li>
         <li><a href="ET.html">ET</a></li>
-        <li><a href="ELA.html">ELA</a></li>
+        <li><a href="ART.html">ART</a></li>
         <li><a href="SCIENCE.html">SCIENCE</a></li>
         <li><a href="HISTORY.html">HISTORY</a></li>
         <li><a href="LINK.html">LINK</a></li>
     </ul>
  </div>     
  <div class="content"> 
+    <br> <br> <br><br><img src="images/map.jpeg" alt="main" width="700px" height="500px" class="ABOUTpic";>
+    <h9>This is my history midterm project. <br>
+    The name of a land is Gyuvinni Land.<br>
+    Because Gyuvinni is my favorite idol.<br>
+    I made a land shape 'hungry' in Korean<br>
+    because I was hungry. <br>
+    I had a lot of fun while doing this project. <br>
+    
+
+</h9>
