--- a/ART.html
+++ b/ART.html
@@ -16,10 +16,21 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT ME</a></li>
         <li><a href="ET.html">ET</a></li>
-        <li><a href="ELA.html">ELA</a></li>
+        <li><a href="ART.html">ART</a></li>
         <li><a href="SCIENCE.html">SCIENCE</a></li>
         <li><a href="HISTORY.html">HISTORY</a></li>
         <li><a href="LINK.html">LINK</a></li>
     </ul>
  </div>     
  <div class="content"> 
+    <br><br><br> <video width="650" height="450" controls>
+    <source src="night.mp4" type="video/mp4">
+  </video>
+    <h10>This is my art midterm project <br>
+        with Elena and Sky.<br>
+        We remaked 'The Starry Night' by Van Gogh.<br>
+        I did painting, Sky and Elena did drawing. <br>
+        Cutting cardboard was most difficult work.<br>
+        Art teacher said I did a really great job. <br>
+        This project is my favorite midterm project.
+</h10>
