--- a/ET.html
+++ b/ET.html
@@ -16,7 +16,7 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT ME</a></li>
         <li><a href="ET.html">ET</a></li>
-        <li><a href="ELA.html">ELA</a></li>
+        <li><a href="ART.html">ART</a></li>
         <li><a href="SCIENCE.html">SCIENCE</a></li>
         <li><a href="HISTORY.html">HISTORY</a></li>
         <li><a href="LINK.html">LINK</a></li>
