--- a/SCIENCE.html
+++ b/SCIENCE.html
@@ -16,14 +16,14 @@
         <li><a href="index.html">HOME</a></li>
         <li><a href="about.html">ABOUT ME</a></li>
         <li><a href="ET.html">ET</a></li>
-        <li><a href="ELA.html">ELA</a></li>
+        <li><a href="ART.html">ART</a></li>
         <li><a href="SCIENCE.html">SCIENCE</a></li>
         <li><a href="HISTORY.html">HISTORY</a></li>
         <li><a href="LINK.html">LINK</a></li>
     </ul>
  </div>     
  <div class="content"> 
-    <br> <br> <br> 
+    <br> <br> <br> <br>
     <img src="images/slime.jpeg" alt="main"  width="600px" height="400px" class="SCIENCEpic";>
     <h7>I made a slime in science class. <br>
         I've bought and played with <br>
@@ -31,8 +31,8 @@
           my first time making it <br> 
           myself. It was the most fun <br>
          project for me. </h7>
-     <br> <br> <br>
-    <img src="images/jane.jpeg" alt="main"  width="400px" height="550px" class="SCIENCEpic2";>
+     <br> <br> <br><br><br>
+    <img src="images/jane.jpeg" alt="main".  width="400px" height="550px" class="SCIENCEpic2";>
     <h8>This is my midterm project poster.<br> 
         I chose Jane Goodall one <br>
         of the female scientists. <br> 
