--- a/ART.html
+++ b/ART.html
@@ -23,9 +23,9 @@
     </ul>
  </div>     
  <div class="content"> 
-    <br><br><br> <video width="650" height="450" controls>
-    <source src="night.mp4" type="video/mp4">
-  </video>
+    <br><br><br><video width="500px" height="400px" controls="controls">
+ <source src="IMG_6959.mp4" type="IMG_6959/mp4" />
+</video>
     <h10>This is my art midterm project <br>
         with Elena and Sky.<br>
         We remaked 'The Starry Night' by Van Gogh.<br>
